# UserGeneratedContent

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: python.yml
Storage_discovery/: .env.example  ClickHouse_Vertica_comparing.md  ClickHouse_scheme.puml  Postgres_MongoDB_comparing.md  docker-compose.yaml
Storage_discovery/MongoDB/: Dockerfile  README.md  (+1 more)
api_service/: pyproject.toml
api_service/conf/: config.py  gunicorn.conf.py  logging.conf.yml
api_service/db/: mongo.py  redis.py
api_service/docker/: Dockerfile
api_service/models/: base.py  bookmarks.py  progress.py  ratings.py  reviews.py
api_service/scripts/web/: startup.sh
api_service/services/: bookmark_service.py  content_service.py  rating_service.py  redis_service.py  review_service.py
api_service/tests/functional/: conftest.py  utils.py
api_service/tests/functional/src/: test_bookmarks.py  test_reviews.py
api_service/tests/functional/testdata/: add_new_bookmark.json  add_new_review.json  bookmarks.json  reviews.json
api_service/utils/: auth.py  metrics.py  mongo.py  redis.py
api_service/utils/kafka/: producer.py
api_service/webapp/: logging.py  main.py
api_service/webapp/v0/api/: bookmarks.py  errors.py  progress.py  ratings.py  reviews.py  user.py
clickhouse/: Dockerfile  client.py  config.py  docker-compose.yml  example.env  init_db_1.sh  init_db_2.sh  init_db_3.sh  init_db_4.sh
etl_kafka_to_redis/: .env.example  message_processing.py  metrics.py  requirements.txt  script.py  settings.py
logs/: logstash.conf
nginx/: nginx.conf
prometheus/: prometheus.yml
(+11 files in other folders)
